# dukascopy-fx

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  deny.toml
.github/workflows/: ci.yml
benches/: core_benchmarks.rs
config/: fx_fetcher.example.toml  universe.json
docs/: API_STABILITY.md  BENCHMARKS.md  CLI_CONFIG.md  INTEGRATIONS.md
examples/: advanced.rs  basic.rs  batch_download.rs  csv_parquet_pipeline.rs  incremental_checkpoint.rs  live_fetch.rs  pandas_pipeline.py  polars_pipeline.py  weekend_handling.rs
src/: client.rs  error.rs  instrument.rs  interop.rs  lib.rs  macros.rs  market.rs  models.rs  parser.rs  service.rs  time.rs
src/api/: mod.rs  ticker.rs
src/core/: catalog.rs  client.rs  instrument.rs  mod.rs  parser.rs
src/storage/: checkpoint.rs  mod.rs  sink.rs
tests/: integration_test.rs  public_api_offline_test.rs  public_api_snapshot_test.rs
